Fix for text alignment of headers when stacked

--- a/packages/web-components/src/components/va-table/va-table-inner/va-table-inner.scss
+++ b/packages/web-components/src/components/va-table/va-table-inner/va-table-inner.scss
@@ -79,5 +79,10 @@ caption {
   .usa-table--stacked th,
   .usa-table--stacked td {
     width: auto;
+
+    // Ensures table headers stay left-aligned even when stacked
+    &::before {
+      text-align: left;
+    }
   }
 }
